fix: scrollbar

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,7 @@ html,
 body {
   margin: 0;
   padding: 0;
+  overflow-x:hidden;
 }
 
 @font-face {
@@ -12,9 +13,4 @@ body {
 @font-face {
   font-family: 'Poppins';
   src: url(@/assets/fonts/Poppins-Medium.ttf);
-}
-
-/* x scrollbar hide */
-::-webkit-scrollbar {
-  display: none;
 }
